--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -81,46 +81,27 @@
               = link_to "Dashboard", user_dashboard_path
 
             - case current_user.role
-              - when "assembler"
+              - when "employee"
                 %li
                   %img{src: "https://icongr.am/jam/box.svg"}
                   = link_to "Ordens de montagem", assemble_orders_path
                 %li
-                  %img{src: "https://icongr.am/jam/coin.svg"}
-                  = link_to "Ordens de compra", purchase_orders_path
+                  %img{src: "https://icongr.am/jam/box.svg"}
+                  = link_to "Produtos", products_path
+
+              - when "manager"
                 %li
                   %img{src: "https://icongr.am/jam/check.svg"}
                   = link_to "Aprovar Produtos", approve_products_path
                 %li
-                  %img{src: "https://icongr.am/jam/box.svg"}
-                  = link_to "Produtos", products_path
-
-              - when "finance"
+                  %img{src: "https://icongr.am/jam/coin.svg"}
+                  = link_to "Ordens de compra", purchase_orders_path
                 %li
                   %img{src: "https://icongr.am/feather/download.svg"}
                   = link_to "Solicitações de saque", authorize_withdraws_path
                 %li
                   %img{src: "https://icongr.am/jam/box.svg"}
                   = link_to "Produtos", products_path
-                %li
-                  %img{src: "https://icongr.am/jam/user.svg"}
-                  = link_to "Usuários", users_path
-                %li
-                  %img{src: "https://icongr.am/jam/cog.svg"}
-                  = link_to "Configurações", settings_path
-                -# %li
-                -#   %img{src: "https://icongr.am/jam/check.svg"}
-                -#   = link_to "Aprovar Pedidos", unauthorized_payments_path
-                -# %li
-                -#   %img{src: "https://icongr.am/jam/user.svg"}
-                -#   = link_to "Solicitações de ativação", activation_requests_path
-
-              -# - when "aquisition"
-
-              -# - when "support"
-              -#   %li
-              -#     %img{src: "https://icongr.am/jam/box.svg"}
-              -#     = link_to "Ordens de montagem", assemble_orders_path
 
               - when "seller"
                 %li
@@ -133,32 +114,33 @@
                   %img{src: "https://icongr.am/jam/coin.svg"}
                   = link_to "Pedidos", purchase_orders_path
 
-              - else
+              - when "admin"
                 %li
                   %img{src: "https://icongr.am/jam/user-circle.svg"}
                   = link_to "Meu perfil", user_path(current_user)
-                - if not current_user.role == "seller"
-                  %li
-                    %img{src: "https://icongr.am/jam/shopping-cart.svg"}
-                    = link_to "Comprar", store_path
-                - if current_user.role == "consultant" or current_user.role == "client"
-                  %li
-                    %img{src: "https://icongr.am/feather/box.svg"}
-                    = link_to "Meus pedidos", purchases_path
-                - if current_user.role == "consultant" or current_user.role == "admin"
-                  %li
-                    %img{src: "https://icongr.am/jam/sitemap.svg"}
-                    = link_to "Minha Rede", user_levels_path
-                - if current_user.role == "admin"
-                  %li
-                    %img{src: "https://icongr.am/jam/box.svg"}
-                    = link_to "Produtos", products_path
-                  %li
-                    %img{src: "https://icongr.am/jam/user.svg"}
-                    = link_to "Usuários", users_path
-                  %li
-                    %img{src: "https://icongr.am/jam/cog.svg"}
-                    = link_to "Configurações", settings_path
+                %li
+                  %img{src: "https://icongr.am/jam/sitemap.svg"}
+                  = link_to "Minha Rede", user_levels_path
+                %li
+                  %img{src: "https://icongr.am/jam/user.svg"}
+                  = link_to "Usuários", users_path
+                %li
+                  %img{src: "https://icongr.am/jam/cog.svg"}
+                  = link_to "Configurações", settings_path
+
+              - when "consultant"
+                %li
+                  %img{src: "https://icongr.am/jam/user-circle.svg"}
+                  = link_to "Meu perfil", user_path(current_user)
+                %li
+                  %img{src: "https://icongr.am/jam/shopping-cart.svg"}
+                  = link_to "Comprar", store_path
+                %li
+                  %img{src: "https://icongr.am/feather/box.svg"}
+                  = link_to "Meus pedidos", purchases_path
+                %li
+                  %img{src: "https://icongr.am/jam/sitemap.svg"}
+                  = link_to "Minha Rede", user_levels_path
 
           %img.pattern{src: "#{asset_path('group_11.svg')}"}
           = image_tag("logo-horizontal.png", class: "logo")
