--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -29,7 +29,7 @@
       = link_to_add_association ' + ', f, :sizes, class: "add-association-button"
   %br
 
-  - if not current_user.role == "seller"
+  - unless current_user.role == "seller"
     = f.input :user_id, label: "Vendedor:", as: :select, collection: User.where(role: "seller"), label_method: :name, value_method: :id
     = f.input :graduation_value, label: "Porcentagem para graduação (%)", input_html: { value: f.object.graduation_value || 75, min: 0, max: 100 }
     = f.input :hidden, as: :hidden
